# name: test_binary_classicals
  None
# ---
# name: test_construction_syntax
  None
# ---
# name: test_construction_syntax.1
  None
# ---
# name: test_construction_syntax.2
  None
# ---
# name: test_controlled_gates
  None
# ---
# name: test_copy
  None
# ---
# name: test_copy.1
  None
# ---
# name: test_def_gate
  None
# ---
# name: test_defgate
  '''
  DEFGATE TEST:
      1.0, 0
      0, 1.0
  
  '''
# ---
# name: test_defgate.1
  'TEST 1 2'
# ---
# name: test_defgate.2
  'TEST 1 2'
# ---
# name: test_defgate_param
  '''
  DEFGATE TEST:
      1.0, 0
      0, 1.0
  
  '''
# ---
# name: test_defgate_param.1
  'TEST 1'
# ---
# name: test_gate
  'TEST 1 2'
# ---
# name: test_inst_gates
  None
# ---
# name: test_inst_string
  None
# ---
# name: test_inst_tuple
  None
# ---
# name: test_measure_all
  None
# ---
# name: test_measure_all_noncontig
  None
# ---
# name: test_measurement_calls
  None
# ---
# name: test_memory_reference_unpacking
  None
# ---
# name: test_merge_with_pauli_noise
  None
# ---
# name: test_multiqubit_gate
  None
# ---
# name: test_phases
  None
# ---
# name: test_plus_operator
  None
# ---
# name: test_prog_init
  None
# ---
# name: test_program_pop
  None
# ---
# name: test_program_pop.1
  None
# ---
# name: test_program_string
  None
# ---
# name: test_program_tuple
  None
# ---
# name: test_rotations
  None
# ---
# name: test_simple_instructions
  None
# ---
# name: test_singles
  None
# ---
# name: test_swaps
  None
# ---
# name: test_ternary_classicals
  None
# ---
# name: test_unary_classicals
  None
# ---
